@@ -31,7 +31,7 @@
 
 <grammar
   datatypeLibrary="http://www.w3.org/2001/XMLSchema-datatypes"  
-  ns="http://gramps-project.org/xml/1.1.2/"
+  ns="http://gramps-project.org/xml/1.1.3/"
   xmlns="http://relaxng.org/ns/structure/1.0">
 
   <start><element name="database">
@@ -232,6 +232,7 @@
     <optional><ref name="date-content"/></optional>
     <optional><element name="street"><text/></element></optional>
     <optional><element name="city"><text/></element></optional>
+    <optional><element name="county"><text/></element></optional>
     <optional><element name="state"><text/></element></optional>
     <optional><element name="country"><text/></element></optional>
     <optional><element name="postal"><text/></element></optional>
@@ -369,6 +370,7 @@
         <attribute name="lat"><data type="float"/></attribute>
     </element></optional>
     <zeroOrMore><element name="location">
+        <optional><attribute name="street"><text/></attribute></optional>
         <optional><attribute name="city"><text/></attribute></optional>
         <optional><attribute name="parish"><text/></attribute></optional>
         <optional><attribute name="county"><text/></attribute></optional>
